<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/shape"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/cpl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="14dp"
            android:allowUndo="true"
            android:text="@string/cpl1"
            tools:ignore="RelativeOverlap,UnusedAttribute"
            android:background="@drawable/shape"
            />

    <Button
        android:id="@+id/cl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cpl1"
        android:layout_below="@+id/cpl1"
        android:layout_marginTop="11dp"
        android:text="@string/cl2"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl2"
        android:layout_below="@+id/cl2"
        android:layout_marginTop="11dp"
        android:text="@string/cl4"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl4"
        android:layout_centerVertical="true"
        android:text="@string/cl6"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl6"
        android:layout_below="@+id/cl6"
        android:layout_marginTop="13dp"
        android:text="@string/cl8"
        android:background="@drawable/shape" />

    <Button
        android:id="@+id/cl10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl8"
        android:layout_below="@+id/cl8"
        android:layout_marginTop="12dp"
        android:text="@string/cl10"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl10"
        android:layout_below="@+id/cl10"
        android:layout_marginTop="11dp"
        android:text="@string/cl12"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:text="cl1"
        tools:ignore="HardcodedText"
        android:layout_alignBaseline="@+id/cpl1"
        android:layout_alignBottom="@+id/cpl1"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cl2"
        android:layout_alignBottom="@+id/cl2"
        android:layout_alignStart="@+id/cl1"
        android:text="cl3"
        tools:ignore="HardcodedText"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cl4"
        android:layout_alignBottom="@+id/cl4"
        android:layout_alignStart="@+id/cl3"
        android:text="@string/cl5"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl5"
        android:layout_alignTop="@+id/cl6"
        android:text="@string/cl7"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl7"
        android:layout_alignTop="@+id/cl8"
        android:text="@string/cl9"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/cl11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cl12"
        android:layout_alignEnd="@+id/cl9"
        android:text="@string/cl11"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cl11"
        android:layout_alignTop="@+id/cl12"
        android:text="mic"
        tools:ignore="HardcodedText"
        android:background="@drawable/shape"/>

    </RelativeLayout>

</RelativeLayout>