<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.proto.MainActivity"
    android:background="@drawable/image1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="#c7e4f1fa"
        android:id="@+id/relativeLayout2">


        <EditText
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="106dp"
            android:layout_above="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="215dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/login"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:contentDescription=""
            android:text="@string/login"
            app:srcCompat="@drawable/log"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="414dp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="69dp"
        app:srcCompat="@drawable/comp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        tools:ignore="ContentDescription" />


</RelativeLayout>
